// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard and Grading NavLinks render for Role.Staff 1`] = `
"<Blueprint4.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint4.NavbarGroup align=\\"left\\">
    <NavLink className={[Function: className]} to=\\"/courses/0/missions\\" title=\\"Missions\\">
      <Blueprint4.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Missions
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/quests\\" title=\\"Quests\\">
      <Blueprint4.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Quests
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/paths\\" title=\\"Paths\\">
      <Blueprint4.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Paths
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/contests\\" title=\\"Contests\\">
      <Blueprint4.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Contests
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/others\\" title=\\"Others\\">
      <Blueprint4.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Others
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
  </Blueprint4.NavbarGroup>
  <Blueprint4.NavbarGroup align=\\"right\\">
    <NavLink className={[Function: className]} to=\\"/courses/0/groundcontrol\\" title=\\"Ground Control\\">
      <Blueprint4.Icon icon=\\"satellite\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Ground Control
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/dashboard\\" title=\\"Dashboard\\">
      <Blueprint4.Icon icon=\\"globe\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Dashboard
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/sourcereel\\" title=\\"Sourcereel\\">
      <Blueprint4.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/grading\\" title=\\"Grading\\">
      <Blueprint4.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Grading
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/storysimulator\\" title=\\"Story Simulator\\">
      <Blueprint4.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Story Simulator
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/notipreference\\" title=\\"Notifications\\">
      <Blueprint4.Icon icon=\\"notifications\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md hidden-lg\\">
        Notifications
      </div>
    </NavLink>
  </Blueprint4.NavbarGroup>
</Blueprint4.Navbar>"
`;

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard, Grading and AdminPanel NavLinks do NOT render for Role.Student 1`] = `
"<Blueprint4.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint4.NavbarGroup align=\\"left\\">
    <NavLink className={[Function: className]} to=\\"/courses/0/missions\\" title=\\"Missions\\">
      <Blueprint4.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Missions
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/quests\\" title=\\"Quests\\">
      <Blueprint4.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Quests
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/paths\\" title=\\"Paths\\">
      <Blueprint4.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Paths
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/contests\\" title=\\"Contests\\">
      <Blueprint4.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Contests
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/others\\" title=\\"Others\\">
      <Blueprint4.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Others
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
  </Blueprint4.NavbarGroup>
  <Blueprint4.NavbarGroup align=\\"right\\">
    <NavLink className={[Function: className]} to=\\"/courses/0/notipreference\\" title=\\"Notifications\\">
      <Blueprint4.Icon icon=\\"notifications\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md hidden-lg\\">
        Notifications
      </div>
    </NavLink>
  </Blueprint4.NavbarGroup>
</Blueprint4.Navbar>"
`;

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard, Grading, XP Calculation and AdminPanel NavLinks render for Role.Admin 1`] = `
"<Blueprint4.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint4.NavbarGroup align=\\"left\\">
    <NavLink className={[Function: className]} to=\\"/courses/0/missions\\" title=\\"Missions\\">
      <Blueprint4.Icon icon=\\"flame\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Missions
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/quests\\" title=\\"Quests\\">
      <Blueprint4.Icon icon=\\"lightbulb\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Quests
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/paths\\" title=\\"Paths\\">
      <Blueprint4.Icon icon=\\"predictive-analysis\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Paths
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/contests\\" title=\\"Contests\\">
      <Blueprint4.Icon icon=\\"comparison\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Contests
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/others\\" title=\\"Others\\">
      <Blueprint4.Icon icon=\\"manual\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Others
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
  </Blueprint4.NavbarGroup>
  <Blueprint4.NavbarGroup align=\\"right\\">
    <NavLink className={[Function: className]} to=\\"/courses/0/groundcontrol\\" title=\\"Ground Control\\">
      <Blueprint4.Icon icon=\\"satellite\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Ground Control
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/dashboard\\" title=\\"Dashboard\\">
      <Blueprint4.Icon icon=\\"globe\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Dashboard
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/sourcereel\\" title=\\"Sourcereel\\">
      <Blueprint4.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/grading\\" title=\\"Grading\\">
      <Blueprint4.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Grading
      </div>
      <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/storysimulator\\" title=\\"Story Simulator\\">
      <Blueprint4.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Story Simulator
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/xpcalculation\\" title=\\"XP Calculation\\">
      <Blueprint4.Icon icon=\\"calculator\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md hidden-lg\\">
        XP Calculation
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/adminpanel\\" title=\\"Admin Panel\\">
      <Blueprint4.Icon icon=\\"settings\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md hidden-lg\\">
        Admin Panel
      </div>
    </NavLink>
    <NavLink className={[Function: className]} to=\\"/courses/0/notipreference\\" title=\\"Notifications\\">
      <Blueprint4.Icon icon=\\"notifications\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md hidden-lg\\">
        Notifications
      </div>
    </NavLink>
  </Blueprint4.NavbarGroup>
</Blueprint4.Navbar>"
`;
